improve Generating Changelog and Creating Release

--- a/.github/workflows/release-changelog.yml
+++ b/.github/workflows/release-changelog.yml
@@ -1,4 +1,4 @@
-name: Generate Changelog and Create Release Automatically
+name: Generate Changelog and Create Release
 
 on:
   push:
@@ -25,38 +25,32 @@ jobs:
 
       - name: Update CHANGELOG.md
         run: |
-          # Get the tag name and date
-          TAG_NAME=${{ github.ref_name }}
+          # Get the tag name
+          TAG_NAME=${GITHUB_REF#refs/tags/}
           VERSION=${TAG_NAME#v}
           DATE=$(date +%Y-%m-%d)
           
-          # Create temporary files
-          echo "## [${VERSION}] - ${DATE}" > entry.txt
-          echo "" >> entry.txt
-          echo "${{ steps.changelog.outputs.changelog }}" >> entry.txt
-          echo "" >> entry.txt
+          # Read existing changelog
+          CHANGELOG=$(cat CHANGELOG.md)
           
-          # Add link reference to another file
-          echo "[${VERSION}]: https://github.com/${GITHUB_REPOSITORY}/releases/tag/${TAG_NAME}" > link.txt
+          # Create new changelog entry
+          NEW_ENTRY="## [${VERSION}] - ${DATE}\n\n${{ steps.changelog.outputs.changelog }}\n"
           
-          # Combine files
-          head -n 5 CHANGELOG.md > changelog_new.md
-          cat entry.txt >> changelog_new.md
-          tail -n +6 CHANGELOG.md >> changelog_new.md
-          cat link.txt >> changelog_new.md
+          # Update the link reference at the bottom
+          LINK_REF="[${VERSION}]: https://github.com/${GITHUB_REPOSITORY}/releases/tag/${TAG_NAME}"
           
-          # Replace the original file
-          mv changelog_new.md CHANGELOG.md
+          # Insert new entry after header (after line 5)
+          sed -i "5a\\${NEW_ENTRY}" CHANGELOG.md
           
-          # Clean up temporary files
-          rm entry.txt link.txt
+          # Append link reference at the end
+          echo ${LINK_REF} >> CHANGELOG.md
           
           # Commit and push changes
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add CHANGELOG.md
           git commit -m "Update CHANGELOG.md for ${TAG_NAME}" || echo "No changes to commit"
-          git push
+          git push origin HEAD:main
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
