--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "name": "backhaul-easy",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
-    "husky": "^8.0.0"
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.1",
+    "husky": "^9.0.11"
   }
-}
+} 
