--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backhaul-easy",
   "version": "0.0.0",
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.0.0",
@@ -16,4 +16,3 @@
     "@semantic-release/release-notes-generator": "^12.0.0"
   }
 }
-
